[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/ruler6030.gd" type="Script" id=1]
[ext_resource path="res://scenes/drawing side/randoms/ray.tscn" type="PackedScene" id=2]

[node name="ruler6030" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ruler" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ruler line" type="Line2D" parent="ruler"]
width = 3.0
default_color = Color( 0, 0.670588, 1, 1 )

[node name="drawLine" type="Line2D" parent="ruler"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 3.0
default_color = Color( 0.917647, 0.917647, 0.917647, 1 )

[node name="dashLine" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.0705882, 0.694118, 0, 1 )

[node name="dashLine2" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 1, 0, 0.843137, 1 )

[node name="ray" parent="." instance=ExtResource( 2 )]
